syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service ApplicantResume {
   rpc ReadApplicantResume(IdRequestAppResume) returns (ApplicantResumePayLoad);  
   rpc CreateApplicantResume(ApplicantResumePayLoad) returns (google.protobuf.Empty);
   rpc UpdateApplicantResume(ApplicantResumePayLoad) returns (google.protobuf.Empty);
   rpc DeleteApplicantResume(ApplicantResumePayLoad) returns (google.protobuf.Empty);
  }

message IdRequestAppResume {
    string Id = 1;
}

message ApplicantResumePayLoad {
         string Id = 1;   
         string Applicant = 2;
         string Resume = 3;
         google.protobuf.Timestamp LastUpdated = 4;
    
   
}